--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "cypress:open": "cypress open",
     "eject": "react-scripts eject",
-    "lint": "eslint .",
-    "lint-fix": "eslint . --fix"
+    "lint": "eslint src",
+    "lint-fix": "eslint src --fix",
+    "start": "react-scripts start",
+    "start:test": "cross-env NODE_ENV=test node src/index.js",
+    "test": "react-scripts test",
+    "test:e2e": "cypress run"
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "cross-env": "^7.0.3",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -22,6 +26,8 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "cypress": "^9.6.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-jest": "^24.7.0"
   },
   "eslintConfig": {
