--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "react-scripts build",
     "cypress:open": "cypress open",
     "eject": "react-scripts eject",
+    "format": "prettier --write src",
     "lint": "eslint src",
     "lint-fix": "eslint src --fix",
     "start": "react-scripts start",
@@ -28,7 +29,8 @@
     "@testing-library/user-event": "^12.6.3",
     "cypress": "^9.6.0",
     "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-jest": "^24.7.0"
+    "eslint-plugin-jest": "^24.7.0",
+    "prettier": "^2.6.2"
   },
   "eslintConfig": {
     "extends": [
