--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "test:e2e": "cypress run"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.21.1",
     "cross-env": "^7.0.3",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^8.0.1",
     "react-scripts": "4.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
