--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^8.0.1",
-    "react-scripts": "4.0.1",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^0.2.4"
