--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cross-env": "^7.0.3",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^17.0.1",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
